# HumanEnough

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  app.py  pyproject.toml
.streamlit/: config.toml
docs/: architecture.md  contributing.md  development.md  heuristics.md
lexicons/: body_sensation.json  causal.json  sensory.json  temporal.json
modules/: deterministic.py  extractor.py  llm_scorer.py  logging_config.py  normaliser.py  preprocessor.py  pricing.py  profiles.py  visualiser.py
sample/: sample_story.txt
tests/: test_extractor.py  test_llm_scorer.py  test_logging.py  test_normaliser.py  test_preprocessor.py  test_pricing.py  test_visualiser.py
