[tool.poetry]
name = "human-enough"
version = "0.1.0"
description = "Narrative analysis tool for fiction writers"
authors = ["David Caldwell"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
streamlit = "^1.59.0"
spacy = "3.8.13"
anthropic = "^0.116.0"
openai = "^2.44.0"
plotly = "^6.8.0"
numpy = "^2.5.1"
pdfplumber = "^0.11.10"
pypdf = "^6.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
